syntax = "proto3";

message Command {
  optional float minTemp = 1;
  optional float maxTemp = 2;
  optional float minHum = 3;
  optional float maxHum = 4;
  optional float minMoist = 5;
  optional float maxMoist = 6;
}