syntax = "proto3";

message Heartbeat {
  string _id = 1;
  string latestReading = 2;
}