syntax = "proto3";

message Reading {
  optional string _id = 1;
  optional string deviceId = 2;
  optional string timestamp = 3;
  optional float temperature = 4;
  optional float humidity = 5;
  optional float moisture = 6;
  optional float uvIndex = 7;
}